[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsb-nest"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = ["bsb-core>=4.0.0b4,<=4.0.0b9999"]

[tool.flit.module]
name = "bsb_nest"

[project.entry-points."bsb.simulation_backends"]
nest = "bsb_nest"

[project.optional-dependencies]
parallel = ["bsb-core[parallel]"]
test = [
    "bsb-test>=0.0.0b9,<=0.0.0b9999",
    "coverage~=7.0",
    "bsb-hdf5>=1.0.0b0",
    # Required to load the Brunel config file
    "bsb-arbor==0.0.0b1"
]
dev = [
    "pre-commit~=3.5",
    "black~=24.1.1",
    "isort~=5.12",
    "bump2version~=1.0"
]

[tool.isort]
profile = "black"
known_third_party = ["nest"]
